[tool.poetry]
name = "mosaic"
version = "0.0.1"
description = "A package to create modular link streams used for testing dynamic community detection algoritms"
authors = ["Yasaman Asgari <50579308+YasAsgari@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
